# roki

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RUST_EMBASSY_PORT_PLAN.md  conftest.py  pyproject.toml
freecad/: asdf.stl  encoder-cover.stl  encoder-knob.stl  encoder.FCStd  encoder_fit_test.FCStd  keycap-Body.3mf  keycap-Body.stl  keycap.FCStd  knob-Body.stl  knob.FCStd  magnet_fit_test-Body.stl  magnet_fit_test.FCStd  magnet_spacer-Body.stl  magnet_spacer.FCStd  nut_fit_test-Body.stl  nut_fit_test.FCStd  power_switch-Body.stl  power_switch.FCStd  roki-battery_cover (Mirror #1).stl  roki-casebattery_cover.stl  roki-casemcu_cover.stl  roki-caseplate.stl  roki-caseshell.stl  roki-mcu_cover (Mirror #1).stl  roki-plate (Mirror #1).stl  roki-shell (Mirror #1).stl  roki-thumb_stickcap.stl  roki-thumb_stickcover.3mf  roki-thumb_stickcover.stl  roki.FCStd  switch_pocket-Body.stl  switch_pocket.FCStd  thumb_stick-Body.step  thumb_stick-cap.stl  thumb_stick-cover.stl  thumb_stick-hole_fit_test.stl  thumb_stick.FCStd  thumb_stick_cap-Body.stl  thumb_stick_cap.FCStd  vertical_magnet_wedge_test.FCStd
kicad/roki/: Library.kicad_sym  fp-info-cache  fp-lib-table  roki.kicad_pcb  roki.kicad_prl  roki.kicad_pro  roki.kicad_sch
kicad/roki/Library.pretty/: thumb_stick.kicad_mod
roki-firmware-rs/: Cargo.toml  Makefile  README.md  build-uf2.sh  build.rs  memory.x
roki-firmware-rs/.cargo/: config.toml
roki-firmware-rs/config/: default.json
roki-firmware-rs/src/: buzzer.rs  calibration.rs  config.rs  encoder.rs  keymap.rs  layers.rs  lib.rs  logging.rs  main.rs  matrix.rs  protocol.rs  thumbstick.rs  utils.rs
roki-firmware-rs/src/ble/: hid_service.rs  mod.rs  roki_service.rs
roki-firmware-rs/src/side/: primary.rs  secondary.rs
roki/cli/: app.py  file_management.py  html_generator.py  local_params.py  logging.py  options.py  rust_tooling.py  utils.py
roki/cli/config/: keys.py  main.py  models.py
roki/firmware/: boot.py  buzzer.py  calibration.py  code.py  config.json  config.py  kb.py  keys.py  layer_handler.py  local_code.py  logging.py  manager.py  messages.py  params.py  service.py  utils.py
roki/templates/: _javascript.html  _style.css  base.html
roki/tests/: test_file_management.py  test_html_generator.py
roki/tui/: app.py
roki/tui/screens/: key_editor.py
roki/tui/widgets/: keyboard.py  search_key.py  side.py
tests/: test_firmware_utils.py  test_html_generator.py  test_kb.py  test_models.py  test_utils.py
tests/cli/: test_app.py  test_file_management.py  test_html_generator.py  test_local_params.py  test_logging.py  test_utils.py
tests/cli/config/: test_models.py
tests/firmware/: conftest.py  test_boot.py  test_calibration.py  test_code.py  test_config.py  test_kb.py  test_keys.py  test_layer_handler.py  test_logging.py  test_manager.py  test_service.py  test_utils.py
tui/: app.py
tui/widgets/: key.py  side.py
