[tool.poetry]
name = "roki"
version = "0.1.0"
description = ""
authors = ["Rodrigo Eiti Kimura <rodrigoeitikimura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"
textual-dev = "*"
fastapi = "*"
uvicorn = "*"
minify-html = "*"
jinja2 = "*"
circuitpython-stubs = "*"
types-circuitpython = "*"
adafruit-circuitpython-ble = "*"
adafruit-circuitpython-ticks = "*"
adafruit-circuitpython-itertools = "*"
adafruit-circuitpython-hid = "*"
adafruit-circuitpython-sharpmemorydisplay = "^1.4.14"

[tool.poetry.group.manager.dependencies]
circup = "*"
rshell = "*"
adafruit-ampy = "*"

[tool.poetry.group.dev.dependencies]
commitizen = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roki = "roki.cli.app:app"

[tool.pytest.ini_options]
addopts = "--cov=roki --cov-report html --cov-report term"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
