[project]
name = "roki"
version = "0.1.0"
description = ""
authors = [{ name = "Rodrigo Eiti Kimura", email = "rodrigoeitikimura@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "typer",
    "textual-dev",
    "fastapi",
    "uvicorn",
]
[project.optional-dependencies]
manager = [
    "circup",
    "rshell",
    "adafruit-ampy",
]
[dependency-groups]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "circuitpython-stubs",
    "types-circuitpython",
    "adafruit-circuitpython-ble",
    "adafruit-circuitpython-ticks",
    "adafruit-circuitpython-itertools",
    "adafruit-circuitpython-hid",
    "minify-html",
    "jinja2",
]

[project.scripts]
roki = "roki.cli.app:app"

[tool.uv]
default-groups = [
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
addopts = ["--cov=roki", "--cov-report=html", "--cov-report=term"]
