[package]
name = "roki-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rodrigo Eiti Kimura <rodrigoeitikimura@gmail.com>"]
description = "Rust + Embassy firmware for RoKi split keyboard"

[dependencies]
# ── Async runtime ──────────────────────────────────
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread"] }
embassy-time     = "0.3"
embassy-sync     = "0.6"
embassy-futures  = "0.1"

# ── nRF52840 HAL ───────────────────────────────────
embassy-nrf = { version = "0.2", features = [
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
] }

# ── BLE (SoftDevice s140) ──────────────────────────
nrf-softdevice      = { version = "0.1.0", features = ["s140", "nrf52840", "ble-peripheral", "ble-central", "ble-gatt-server", "ble-gatt-client", "critical-section-impl"] }
nrf-softdevice-s140 = "0.1.2"

# ── USB HID fallback ───────────────────────────────
embassy-usb = { version = "0.3", features = ["usbd-hid"] }
usbd-hid    = "0.8"

# ── No-std utilities ───────────────────────────────
embedded-storage = "0.3"
heapless        = "0.8"
postcard        = { version = "1.0", features = ["use-defmt"] }
serde           = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

# ── Logging / debugging ────────────────────────────
defmt       = "0.3"
defmt-rtt   = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# ── Cortex-M runtime ───────────────────────────────
cortex-m    = "0.7"
cortex-m-rt = "0.7"

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
codegen-units = 1

[profile.dev]
debug = 2
opt-level = 1
